styling the layout

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Test-4</title>
 </head>
 <body>
-  <!-- /\/\/\/\/\/\/\→_←/\/\/\/\/\/\/\/\ -->
+  <!--! ┌───────────grid-container──────────┐ -->
   <div class="gc">
     <div class="header"></div>
     <div class="left"></div>
@@ -18,6 +18,6 @@
     <div class="right"></div>
     <div class="footer"></div>
   </div>
-  <!-- /\/\/\/\/\/\/\→_←/\/\/\/\/\/\/\/\ -->
+  <!--! └───────────────────────────────────┘ -->
 </body>
 </html>
