--- a/index.html
+++ b/index.html
@@ -9,14 +9,30 @@
 <body>
   <!--! ┌───────────grid-container──────────┐ -->
   <div class="gc">
-    <div class="header"></div>
+    <div class="header">
+      <!--* <=<=[ int ]=>=> -->
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+    </div>
     <div class="left"></div>
     <div class="c-1"></div>
     <div class="c-2"></div>
     <div class="c-3"></div>
     <div class="c-4"></div>
     <div class="right"></div>
-    <div class="footer"></div>
+    <div class="footer">
+      <!--* <=<=[ int ]=>=> -->
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+    </div>
   </div>
   <!--! └───────────────────────────────────┘ -->
 </body>
