--- a/index.html
+++ b/index.html
@@ -17,15 +17,29 @@
       <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
     </div>
-    <div class="left"></div>
+    <div class="left">
+      <!--? d[-_-]b M1-->
+    </div>
     <div class="c-1"></div>
     <div class="c-2"></div>
     <div class="c-3"></div>
     <div class="c-4"></div>
-    <div class="right"></div>
+    <div class="right">
+      <!--? d[-_-]b M1-->
+    </div>
     <div class="footer">
       <!--* <=<=[ int ]=>=> -->
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
