Terminado el  menu1

--- a/index.html
+++ b/index.html
@@ -25,6 +25,38 @@
     </div>
     <div class="left">
       <!--? d[-_-]b M1-->
+      <div class="menu1">
+        <div class="menu1-cont">
+          <nav class="menu1-links">
+            <a href="" class="menu1__link"><img src="./img/ad__fly.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/alarmy.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/automatic_clicker.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/avee_player.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/backdrops.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bandsintown.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bass_booster.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bbc_iplayer_radio.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/blacker_icon_pack.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/boost.png" alt="" width="30px">Link to Content</a>
+          </nav>
+        </div>
+      </div>
+      <div class="menu1">
+        <div class="menu1-cont">
+          <nav class="menu1-links">
+            <a href="" class="menu1__link"><img src="./img/ad__fly.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/alarmy.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/automatic_clicker.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/avee_player.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/backdrops.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bandsintown.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bass_booster.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bbc_iplayer_radio.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/blacker_icon_pack.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/boost.png" alt="" width="30px">Link to Content</a>
+          </nav>
+        </div>
+      </div>
     </div>
     <div class="c-1"></div>
     <div class="c-2"></div>
@@ -32,6 +64,38 @@
     <div class="c-4"></div>
     <div class="right">
       <!--? d[-_-]b M1-->
+      <div class="menu1">
+        <div class="menu1-cont">
+          <nav class="menu1-links">
+            <a href="" class="menu1__link"><img src="./img/ad__fly.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/alarmy.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/automatic_clicker.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/avee_player.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/backdrops.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bandsintown.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bass_booster.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bbc_iplayer_radio.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/blacker_icon_pack.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/boost.png" alt="" width="30px">Link to Content</a>
+          </nav>
+        </div>
+      </div>
+      <div class="menu1">
+        <div class="menu1-cont">
+          <nav class="menu1-links">
+            <a href="" class="menu1__link"><img src="./img/ad__fly.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/alarmy.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/automatic_clicker.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/avee_player.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/backdrops.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bandsintown.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bass_booster.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/bbc_iplayer_radio.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/blacker_icon_pack.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu1__link"><img src="./img/boost.png" alt="" width="30px">Link to Content</a>
+          </nav>
+        </div>
+      </div>
     </div>
     <div class="footer">
       <!--* <=<=[ int ]=>=> -->
