Terminado el menu2 de L y R

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
       <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
     </div>
     <div class="left">
       <!--? d[-_-]b M1-->
@@ -54,6 +61,29 @@
             <a href="" class="menu1__link"><img src="./img/bbc_iplayer_radio.png" alt="" width="30px">Link to Content</a>
             <a href="" class="menu1__link"><img src="./img/blacker_icon_pack.png" alt="" width="30px">Link to Content</a>
             <a href="" class="menu1__link"><img src="./img/boost.png" alt="" width="30px">Link to Content</a>
+          </nav>
+        </div>
+      </div>
+      <!--? d[-_-]b M2-->
+      <div class="menu2">
+        <div class="menu2-cont">
+          <nav class="menu2-links">
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+          </nav>
+        </div>
+      </div>
+      <div class="menu2">
+        <div class="menu2-cont">
+          <nav class="menu2-links">
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
           </nav>
         </div>
       </div>
@@ -96,9 +126,39 @@
           </nav>
         </div>
       </div>
+      <!--? d[-_-]b M2-->
+      <div class="menu2">
+        <div class="menu2-cont">
+          <nav class="menu2-links">
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+          </nav>
+        </div>
+      </div>
+      <div class="menu2">
+        <div class="menu2-cont">
+          <nav class="menu2-links">
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+            <a href="" class="menu2__link"><img src="./img/dra__stic.png" alt="" width="30px">Link to Content</a>
+          </nav>
+        </div>
+      </div>
     </div>
     <div class="footer">
       <!--* <=<=[ int ]=>=> -->
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
+      <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
