Terminado el menu3 de c-1, c-2, c-3 y c-4

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
+      <div class="int"></div>
     </div>
     <div class="left">
       <!--? d[-_-]b M1-->
@@ -88,10 +89,106 @@
         </div>
       </div>
     </div>
-    <div class="c-1"></div>
-    <div class="c-2"></div>
-    <div class="c-3"></div>
-    <div class="c-4"></div>
+    <div class="c-1">
+      <!--? d[-_-]b M3-->
+      <div class="menu3">
+        <div class="menu3-cont">
+          <nav class="menu3-links">
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+          </nav>
+        </div>
+      </div>
+      <div class="menu3">
+        <div class="menu3-cont">
+          <nav class="menu3-links">
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="c-2">
+      <!--? d[-_-]b M3-->
+      <div class="menu3">
+        <div class="menu3-cont">
+          <nav class="menu3-links">
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+          </nav>
+        </div>
+      </div>
+      <div class="menu3">
+        <div class="menu3-cont">
+          <nav class="menu3-links">
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="c-3">
+      <!--? d[-_-]b M3-->
+      <div class="menu3">
+        <div class="menu3-cont">
+          <nav class="menu3-links">
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+          </nav>
+        </div>
+      </div>
+      <div class="menu3">
+        <div class="menu3-cont">
+          <nav class="menu3-links">
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+          </nav>
+        </div>
+      </div>
+    </div>
+    <div class="c-4">
+      <!--? d[-_-]b M3-->
+      <div class="menu3">
+        <div class="menu3-cont">
+          <nav class="menu3-links">
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+          </nav>
+        </div>
+      </div>
+      <div class="menu3">
+        <div class="menu3-cont">
+          <nav class="menu3-links">
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+            <a href="" class="menu3__link"><img src="./img/orangeicon.png" alt="" width="30px">Link to content</a>
+          </nav>
+        </div>
+      </div>
+    </div>
     <div class="right">
       <!--? d[-_-]b M1-->
       <div class="menu1">
@@ -152,6 +249,7 @@
     </div>
     <div class="footer">
       <!--* <=<=[ int ]=>=> -->
+      <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
       <div class="int"></div>
